fix array out of bound bug for contacts with missing tags

--- a/src/main/resources/view/Main.css
+++ b/src/main/resources/view/Main.css
@@ -283,7 +283,7 @@
 }
 
 /* Handles styling of tags */
-#tag {
+#tagLabel {
     -fx-text-fill: black;
-    -fx-font-size: 11;
+    -fx-font-size: 14;
 }
